<?xml version='1.0'?>
<package format='2'>
    <name>hpp-rbprm</name>
    <version>4.14.0</version>
    <description>RB-PRM planner for HPP</description>

    <maintainer email='guilhem.saurel@laas.fr'>Guilhem Saurel</maintainer>
    <license>BSD</license>

    <author>Pierre Fernbach</author>
    <author>Steve Tonneau</author>

    <buildtool_depend>catkin</buildtool_depend>
</package>
